[package]
name = "localserver"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "server_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
